# AndroidStudio_Ncnn_example

./: .gitignore  README.md  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/uner/ii/ncnndemo3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/uner/ii/ncnndemo3/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/uner/ii/ncnndemo3/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ncnn/includes/: layer_type.h  net.h
ncnnshell/: build.gradle
ncnnshell/src/main/: AndroidManifest.xml
ncnnshell/src/main/cpp/: CMakeLists.txt
ncnnshell/src/main/cpp/ncnnshell/: CMakeLists.txt
ncnnshell/src/main/cpp/ncnnshell/includes/: ncnnshell.h
ncnnshell/src/main/cpp/ncnnshell/src/: ncnnshell.cpp
